--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f9f4f1;
+}
+/* navbar -- adjusted for mobile  */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f9f4f1;
+  padding: 10px 20px;
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
+}
+.logo img {
+  height: auto;
+  width: 150px;
+}
+
+.nav-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-links li {
+  padding: 10px;
+}
+
+.nav-links a {
+  color: #27221f;
+  text-decoration: none;
+  font-size: 16px;
+}
+.nav-links a:hover {
+  color: #dabd8a;
+}
+.nav-links a.active {
+  color: palevioletred;
+}
+/* Homepage */
+.Homepage {
+  width: 100%;
+  height: auto;
+  padding: 2rem 0;
+}
+
+.background-size-slideshow {
+  padding: 25rem 0rem;
+}
+/* About Section */
+.About-content {
   text-align: center;
+  color:#27221f;
+  font-size: 16px;
+  padding-bottom: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image-div {
+  display: flex;
+  justify-content: center;
+  max-width: 50%;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* slideshow */
+.slideshow-container {
+  padding-bottom: 100px;
+  margin-bottom: 100px;
+  width: 50%;
+}
+.box-slideshow {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 10px;
+  /* font-size: 15px; */
+  border: 1px solid #27221f;
+  margin: 30px;
+  padding: 30px 50px 50px 30px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.social-media {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f9f4f1;
+  text-align: center;
+  padding: 10px 0;
+}
+.social-media a {
+  color: #27221f;
+  margin: 0 10px;
+}
+.social-media a:hover {
+  color: palevioletred;
+}
+
+.social-media svg {
+  width: 30px;
+  height: 30px;
+}
+.footer-bar {
+  width: 100%;
+  padding: 20px 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.social-media a {
+  color: #27221f;
+}
+
+/* CSS slideshow button */
+.button-75 {
+  align-items: center;
+  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+  border: 0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-family: "Codec cold", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  height: 54px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  letter-spacing: 0.4px;
+  line-height: 1;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.button-75:active {
+  outline: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button-75:hover {
+  outline: 0;
+}
+
+.button-75 span {
+  transition: all 200ms;
+}
+
+.button-75:hover span {
+  transform: scale(0.9);
+  opacity: 0.75;
+}
+
+@media screen and (max-width: 991px) {
+  .button-75 {
+    font-size: 15px;
+    height: 50px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .button-75 span {
+    line-height: 50px;
   }
+}
+.paragraph {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 25px;
+  text-align: right;
 }
