--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ body {
 /* CSS slideshow button */
 .button-75 {
   align-items: center;
-  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
   border: 0;
   border-radius: 10px;
   box-sizing: border-box;
