--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ h1 {
   border: none;
   outline: none;
   padding: 12px 16px;
-  background-color: white;
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
   cursor: pointer;
   margin-right: 8px;
   margin-bottom: 8px;
@@ -286,7 +286,7 @@ h1 {
 
 /* Add a grey background color on mouse-over */
 .btn:hover {
-  background-color: #ddd;
+background: linear-gradient(to bottom, palevioletred, pink);
 }
 
 /* Add a dark background color to the active button */
