wip transition transform

--- a/src/App.css
+++ b/src/App.css
@@ -266,6 +266,11 @@ h1 {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 16px;
   border-radius: 4px;
+  /* transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; */
+}
+.content:hover {
+  transform: scale(1.1);
+  /* box-shadow: 0 0 10px palevioletred; */
 }
 
 /* The "show" class is added to the filtered elements */
@@ -294,4 +299,11 @@ background: linear-gradient(to bottom, palevioletred, pink);
   background-color: #666;
   color: white;
 }
+.service-item{
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
 
+.service-item:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px palevioletred;
+}
