--- a/src/App.css
+++ b/src/App.css
@@ -307,3 +307,22 @@ background: linear-gradient(to bottom, palevioletred, pink);
   transform: scale(1.1);
   box-shadow: 0 0 10px palevioletred;
 }
+.add-btn {
+   border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+  cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
+
+.remove-btn {
+   border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+  cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
