--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap");
 
 body {
   margin: 0;
@@ -60,8 +59,8 @@ body {
 }
 
 /* Home-page slideshow paragraph */
-.kt-paragraph{
-   font-family: "Sedan SC", serif;
+.kt-paragraph {
+  font-family: "Sedan SC", serif;
   font-weight: 400;
   font-style: normal;
   font-size: 20px;
@@ -296,7 +295,7 @@ h1 {
 
 /* Add a grey background color on mouse-over */
 .btn:hover {
-background: linear-gradient(to bottom, palevioletred, pink);
+  background: linear-gradient(to bottom, palevioletred, pink);
 }
 
 /* Add a dark background color to the active button */
@@ -304,7 +303,7 @@ background: linear-gradient(to bottom, palevioletred, pink);
   background-color: #666;
   color: white;
 }
-.service-item{
+.service-item {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
@@ -313,7 +312,7 @@ background: linear-gradient(to bottom, palevioletred, pink);
   box-shadow: 0 0 10px palevioletred;
 }
 .add-btn {
-   border: none;
+  border: none;
   outline: none;
   padding: 12px 16px;
   background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
@@ -323,11 +322,24 @@ background: linear-gradient(to bottom, palevioletred, pink);
 }
 
 .remove-btn {
-   border: none;
+  border: none;
   outline: none;
   padding: 12px 16px;
   background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
   cursor: pointer;
   margin-right: 8px;
   margin-bottom: 8px;
+}
+
+/* aboutpage */
+.about-container {
+  display: flex;
+}
+.column-one {
+  flex: 1; /* Each column gets an equal share of the available space */
+  border: 1px solid black; /* Optional: Add borders for visual separation */
+  padding: 20px; /* Optional: Add padding for spacing */
+}
+.column-one img{
+  height: 600px;
 }
