--- a/src/App.css
+++ b/src/App.css
@@ -356,3 +356,21 @@ h1 {
 .column-one img {
   height: 600px;
 }
+.reviews-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 20px auto;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px; /* Adjust the max-width as needed */
+}
+
+iframe {
+  width: 100%;
+  border: none;
+  overflow: hidden;
+}
