--- a/src/App.css
+++ b/src/App.css
@@ -390,3 +390,21 @@ iframe {
   border: none;
   overflow: hidden;
 }
+.previous-button {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+  cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
+.next-button {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+  cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
